--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
         <!-- Portfolio End -->
 
 
+        
         <section class="h-section">
            
             <div class="container">
@@ -410,7 +411,7 @@
                                 <div class="owl-carousel-info">
                                     <h4 class=" head-us">
                                         احمد عادل بكري
-                                        <img src="img/verified.png" class="owl-carousel-verified-image img-fluid" alt="">
+                                        <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><img src="img/verified.png" class="owl-carousel-verified-image img-fluid" alt=""></a>
                                     </h4>
                                 </div>
                             </div>
@@ -585,8 +586,8 @@
                             </div>
                             <div class="col-md-6 text-center text-md-end">
                                 <div class="footer-menu">
-                                    <a href="">Home</a>
-                                    <a href="#">Contact</a>
+                                    <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL">Home</a>
+                                    <a href="href=https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL">Contact</a>
                                     <a href="#">Help</a>
                                 </div>
                             </div>
