--- a/page-1.html
+++ b/page-1.html
@@ -50,6 +50,9 @@
                     <!---- <h1 class="m-0"><i class="material-icons"  style="font-size:40px;">computer</i> تكنو  <span class="fs-5">      تعليم     </span></h1>--->
                     <img src="img/sub-img/tecno-logo.png" style="color: white; " alt="Logo">
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="fa fa-bars"></span>
+                </button>
                 <div class="collapse navbar-collapse tit" id="navbarCollapse">
                     <div class="navbar-nav mss-auto py-0 rtl">
                         <a href="contact.html" class="nav-item nav-link  "><i class="fas fa-phone"></i></a> 
