--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                             <div class="col-md-6 text-center text-md-end">
                                 <div class="footer-menu">
                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL">Home</a>
-                                    <a href="href=https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL">Contact</a>
+                                    <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL">Contact</a>
                                     <a href="#">Help</a>
                                 </div>
                             </div>
