--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                                             <div class="row">
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><i class="fa fa-user"></i></a>
-                                                    <h4><span>Githup:</span><br>44.48 M</h4>
+                                                    <h4><span>phone:</span><br>01068072309</h4>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <i class="fa fa-globe"></i>
@@ -133,7 +133,7 @@
                                             <div class="row">
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><i class="fa fa-user"></i></a>
-                                                    <h4><span>Githup:</span><br>44.48 M</h4>
+                                                    <h4><span>phone:</span><br>01068072309</h4>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <i class="fa fa-globe"></i>
@@ -169,7 +169,7 @@
                                             <div class="row">
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><i class="fa fa-user"></i></a>
-                                                    <h4><span>Githup:</span><br>44.48 M</h4>
+                                                    <h4><span>phone:</span><br>01068072309</h4>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <i class="fa fa-globe"></i>
@@ -206,11 +206,11 @@
                                             <div class="row">
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><i class="fa fa-user"></i></a>
-                                                    <h4><span>Githup:</span><br>44.48 M</h4>
+                                                    <h4><span>phone:</span><br>01068072309</h4>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <i class="fa fa-globe"></i>
-                                                    <h4><span>WebSite:</span><br>275.400 KM<em>2</em></h4>
+                                                    <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><h4><span>WebSite:</span><br>275.400 KM<em>2</em></h4></a>
                                                 </div>
                                                 <div class="col-lg-3 col-sm-6 col-6">
                                                     <a href="https://www.facebook.com/profile.php?id=100093195571669&mibextid=ZbWKwL"><i
