--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                                 <div class="ps-3">
-                                    <h6 class="text-white mb-1">unKnewen </h6>
+                                    <h6 class="text-white mb-1">unKnown </h6>
                                     <small>طالب بنظام الساعات المعتمدة</small>
                                 </div>
                             </div>
@@ -292,7 +292,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
                                 <div class="ps-3">
-                                    <h6 class="text-white mb-1">unKnewen </h6>
+                                    <h6 class="text-white mb-1">unKnown </h6>
                                     <small>طالب بنظام الساعات المعتمدة</small>
                                 </div>
                             </div>
@@ -308,7 +308,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
                                 <div class="ps-3">
-                                    <h6 class="text-white mb-1">unKnewen </h6>
+                                    <h6 class="text-white mb-1">unKnown </h6>
                                     <small>طالب بنظام الساعات المعتمدة</small>
                                 </div>
                             </div>
@@ -324,7 +324,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
                                 <div class="ps-3">
-                                    <h6 class="text-white mb-1">unKnewen </h6>
+                                    <h6 class="text-white mb-1">unKnown </h6>
                                     <small>طالب بنظام الساعات المعتمدة</small>
                                 </div>
                             </div>
