--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
                                 <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
+                                <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
                                 <div class="row">
@@ -125,6 +126,7 @@
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
                                 <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
+                                 <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
                                 <div class="row">
@@ -165,6 +167,7 @@
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
                                 <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
+                                 <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
                                 <div class="row">
