--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
                                 <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
-                                <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
+                                <br> <h2 style=" font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
                                 <div class="row">
@@ -126,7 +126,7 @@
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
                                 <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
-                                 <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
+                                 <br> <h2 style=" font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
                                 <div class="row">
@@ -166,7 +166,7 @@
                     <div id="top-banner-4" class="banner">
                         <div class="banner-inner-wrapper header-text">
                             <div class="section-heading">
-                                <h2 style="margin-top: 200px; font-size: 50px;">contact with us</h2>
+                                <h2 style=" font-size: 50px;">contact with us</h2>
                                  <br> <h2 style="margin-top: 200px; font-size: 50px;">تواصل معنا</h2>
                             </div>
                             <div class="container">
