--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                                     <li class="breadcrumb-item"><a class="text-white" href="#">مشروع تخرج بكلية التربية النوعية جامعة االفيوم 2023</a></li>
                                 </ol>
                                 <ol class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#"> قسم تكنولوجيا التعلم</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="#"> قسم تكنولوجيا التعليم</a></li>
                                 </ol>
                             </nav>
                         </div>
